--- a/main.css
+++ b/main.css
@@ -1,143 +1,1 @@
-body {
-  margin: auto;
-  padding: 0 15px;
-  overflow-x: hidden;
-  font-family: sans-serif;
-  max-width: 350px;
-}
-
-h1 {
-  padding: 15px 0;
-  font-size: 24px;
-  text-align: center;
-}
-
-.calc__density {
-  padding: 5px;
-  display: flex;
-  justify-content: space-around;
-}
-.calc__lenght {
-  padding: 5px;
-  display: flex;
-  justify-content: space-around;
-}
-.calc__width {
-  padding: 5px;
-  display: flex;
-  justify-content: space-around;
-  text-align: center;
-}
-.calc__height {
-  padding: 5px;
-  display: flex;
-  justify-content: space-around;
-  text-align: center;
-}
-
-.form_radio_btn {
-  display: inline-block;
-  margin-right: 10px;
-}
-
-.form_radio_btn input[type=radio] {
-  display: none;
-}
-
-.form_radio_btn label {
-  display: inline-block;
-  cursor: pointer;
-  padding: 0px 15px;
-  line-height: 34px;
-  border: 1px solid #999;
-  border-radius: 6px;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
-}
-
-.btn {
-  padding: 10px 20px;
-  margin: 5px;
-  width: 70px;
-  border: 2px solid #000000;
-  border-radius: 5px;
-}
-.btn_log {
-  width: 100%;
-  margin: 0 0 5px 0;
-}
-.btn_yellow {
-  background-color: yellow;
-}
-.btn_red {
-  background-color: red;
-}
-.btn.active {
-  background-color: #11ff00;
-}
-.btn.disable {
-  background-color: #11ff00;
-}
-
-.input__number {
-  background-color: #eee;
-  vertical-align: top;
-  outline: none;
-  padding: 0;
-  height: 40px;
-  line-height: 40px;
-  text-indent: 10px;
-  display: inline-block;
-  width: 100%;
-  box-sizing: border-box;
-  border: 1px solid #ddd;
-  font-size: 14px;
-  border-radius: 3px;
-}
-.input__number_result {
-  display: inline;
-  width: 49%;
-  font-size: 14px;
-}
-
-input[type=number]:focus {
-  outline: 2px solid blue;
-}
-
-.calc_item {
-  display: flex;
-  justify-content: space-between;
-}
-.calc_item input {
-  width: auto;
-}
-
-.calc__price-inner {
-  display: flex;
-  flex-wrap: wrap;
-}
-.calc__price-inner button {
-  padding: 10px;
-}
-
-#btnAddRow {
-  margin: 0;
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 10px;
-  background-color: blue;
-  color: white;
-}
-
-.hide {
-  width: 0;
-  height: 0;
-  opacity: 0;
-  display: none;
-}
-
-.w-0 {
-  position: absolute;
-  top: -100%;
-}/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
