--- a/main.css
+++ b/main.css
@@ -1,1 +1,7 @@
-/*# sourceMappingURL=main.css.map */
+li {
+  list-style: none;
+}
+
+.calc {
+  max-width: 500px;
+}/*# sourceMappingURL=main.css.map */
