--- a/main.scss
+++ b/main.scss
@@ -1,184 +1,16 @@
-// body {
-//     margin: auto;
-//     padding: 0 15px;
-//     overflow-x: hidden;
-//     font-family: sans-serif;
-//     max-width: 350px;
-// }
-
-// h1 {
-//     padding: 15px 0;
-
-//     font-size: 24px;
-//     text-align: center;
-// }
-
-// .calc {
-//     // border: 2px solid black;
-
-//     &_label {
-//         display: flex;
-//         align-items: center;
-//         // justify-content: space-between;
-//     }
-//     &__price {
-//         &-inner {
-//             display: flex;
-//             flex-wrap: wrap;
-//             justify-content: space-between;
-//             margin-bottom: 5px;
-//             button {
-//                 padding: 10px;
-//             }
-//         }
-//     }
-//     &_item {
-//         display: flex;
-//         justify-content: space-between;
-//         margin-bottom: 5px;
-//         input {
-//             width: auto;
-//         }
-//     }
-//     &__density {
-//         padding: 5px;
-//         display: flex;
-//         justify-content: space-around;
-//     }
-//     &__lenght {
-//         padding: 5px;
-//         display: flex;
-//         justify-content: space-around;
-//     }
-//     &__width {
-//         padding: 5px;
-//         display: flex;
-//         justify-content: space-around;
-//         text-align: center;
-//     }
-//     &__height {
-//         padding: 5px;
-//         display: flex;
-//         justify-content: space-around;
-//         text-align: center;
-//     }
-// }
-
-// .form_radio_btn {
-//     display: inline-block;
-//     margin-right: 10px;
-// }
-// .form_radio_btn input[type="radio"] {
-//     display: none;
-// }
-// .form_radio_btn label {
-//     display: inline-block;
-//     cursor: pointer;
-//     padding: 0px 15px;
-//     line-height: 34px;
-//     border: 1px solid #999;
-//     border-radius: 6px;
-//     user-select: none;
-// }
-
-// .btn {
-//     padding: 10px 20px;
-//     margin: 5px;
-//     width: 70px;
-
-//     border: 2px solid #000000;
-//     border-radius: 5px;
-//     &_price {
-//         width: 18%;
-//     }
-//     &_long {
-//         width: 100%;
-//         margin: 0 0 5px 0;
-//     }
-//     &_yellow {
-//         background-color: yellow;
-//     }
-//     &_red {
-//         background-color: red;
-//     }
-//     &.active {
-//         background-color: #11ff00;
-//     }
-//     &.disable {
-//         background-color: #11ff00;
-//     }
-// }
-
-// .input {
-//     &__number {
-//         background-color: #eee;
-//         vertical-align: top;
-//         outline: none;
-//         padding: 0;
-//         height: 40px;
-//         line-height: 40px;
-//         text-indent: 10px;
-//         display: inline-block;
-//         width: 100%;
-//         box-sizing: border-box;
-//         border: 1px solid #ddd;
-//         font-size: 14px;
-//         border-radius: 3px;
-//         &_result {
-//             display: inline;
-//             width: 49%;
-//             font-size: 14px;
-//             // width: 60px;
-//             // height: 20px;
-//         }
-//     }
-// }
-
-// input[type="number"]:focus {
-//     outline: 2px solid blue;
-// }
-
-// #btnAddRow {
-//     margin: 0;
-//     width: 100%;
-//     padding: 10px;
-//     margin-bottom: 10px;
-//     background-color: blue;
-//     color: white;
-// }
-
-// .hide {
-//     position: absolute;
-//     // top: -1000%;
-//     // left: -1000%;
-//     width: 0;
-//     height: 0;
-//     opacity: 0;
-//     // display: none;
-// }
-// .w-0 {
-//     position: absolute;
-//     top: -100%;
-// }
-
-// .bridge {
-//     &__item {
-//         display: flex;
-//         justify-content: space-between;
-//     }
-// }
-// .btn {
-//     width: 100%;
-//     margin-bottom: 10px;
-// }
-// .calc {
-//     &__row {
-
-//     }
-// }
-
-li {list-style: none;}
+li {
+    list-style: none;
+}
 
 .calc {
     max-width: 500px;
+}
+
+.svg_edit {
+    width: 20px;
+    pointer-events: none;
+}
+
+.card {
+    border: none;
 }
